[package]
name = "async_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
apache-avro = "0.16.0"
serde = { version = "1.0.197", features = ["derive"] }
md-5 = "0.10.6"
serde_json = "1.0.114"

[dependencies.yaq_r]
path = "../.."